<resources>
    <string name="app_name">BeerLens</string>
    <string name="beerlens">BeerLens</string>
    <string name="bienvenido">Bienvenido Neto</string>
    <string name="instrucciones">Ingresa tu nombre por favor</string>
    <string name="recordar">Recordar nombre</string>
    <string name="ingresar">Ingresar</string>
    <string name="see">ver mas</string>
    <string name="descripcion">Descripcion</string>
    <string name="brewers_tips">Brewers tips</string>
</resources>