<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.login.Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/beericon"
        app:layout_constraintBottom_toTopOf="@id/textApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
     />

    <TextView
        android:id="@+id/textApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vinasans_regular"
        android:layout_marginBottom="40dp"
        android:text="@string/beerlens"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card" />

    <androidx.cardview.widget.CardView
        android:layout_marginBottom="-15dp"
        android:id="@+id/card"
        android:layout_width="match_parent"
        app:cardElevation="20dp"
        app:cardCornerRadius="20dp"
        android:layout_height="320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/yellow"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:padding="10dp"
            >
            <TextView
                android:text="@string/bienvenido"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:fontFamily="@font/dm_sans_bold"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/instrucciones"
                android:textSize="18sp"
                android:fontFamily="@font/dm_sans_regular"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="text"
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/background_edit"
                />
            <CheckBox android:id="@+id/checkbox_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recordar" />
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresar"
                android:backgroundTint="@color/black"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>